argocd/apps/actions-runner-controller/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-runner-controller-github-webhook-server
  annotations:
    "cert-manager.io/cluster-issuer": letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /actions-runner-controller-github-webhook-server
        pathType: Prefix
        backend:
          service:
            name: actions-runner-controller-github-webhook-server
            port:
              number: 80
  tls:
  - hosts:
    - arc.alpha.ohmlab.fr
    secretName: arc.alpha.ohmlab.fr
